# reasongraph

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: METHODOLOGY.md  RESEARCH-NOTES.md  SCHEMA.md  UPGRADING.md
examples/: governed_innovation.py  reasongraph_roadmap.json  reasongraph_roadmap.py  security_audit.json  security_audit.py
reasongraph/: __init__.py  cli.py  engine.py  schema.py
tests/: test_engine.py
