[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reasongraph"
version = "0.1.0"
description = "A reasoning engine for principled, evidence-evolving programmes — the governed outer-loop for agentic innovation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["research", "reasoning", "roadmap", "agents", "governance", "abduction", "decision"]
dependencies = []   # stdlib only, by design

[project.urls]
Homepage = "https://github.com/crbazevedo/reasongraph"
Repository = "https://github.com/crbazevedo/reasongraph"
Documentation = "https://github.com/crbazevedo/reasongraph/blob/main/docs/METHODOLOGY.md"

[project.scripts]
reasongraph = "reasongraph.cli:main"

[tool.setuptools]
packages = ["reasongraph"]
